{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 253,
  "lineage": "42de2440-2c3f-89b0-f9f0-73ad68887172",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-test-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca2dbb413feca39e",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0562397ac8fcda41a",
            "domain": "vpc",
            "id": "eipalloc-0ca2dbb413feca39e",
            "instance": "i-0bc17217c7332e4fb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f0bafd575bd09cba",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-34-206-120-222.compute-1.amazonaws.com",
            "public_ip": "34.206.120.222",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_network_interface.terraform-test-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:717561550547:instance/i-0bc17217c7332e4fb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc17217c7332e4fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f0bafd575bd09cba"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0bafd575bd09cba",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d2248028c8342667",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071f0dde8011596e6",
            "tags": {
              "Name": "test-terraform"
            },
            "tags_all": {
              "Name": "test-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0660fc29c670e68c7"
            ]
          },
          "dependencies": [
            "aws_network_interface.terraform-test-nic",
            "aws_security_group.terraform-allow-web-traffic",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717561550547:internet-gateway/igw-02dac4c1acad62187",
            "id": "igw-02dac4c1acad62187",
            "owner_id": "717561550547",
            "tags": {
              "Name": "terraform-internet-gateway"
            },
            "tags_all": {
              "Name": "terraform-internet-gateway"
            },
            "vpc_id": "vpc-0a208dd0d75df90b3"
          },
          "dependencies": [
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terraform-test-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717561550547:network-interface/eni-0f0bafd575bd09cba",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ae97cfe0f150f4f3",
                "device_index": 0,
                "instance": "i-0bc17217c7332e4fb"
              }
            ],
            "id": "eni-0f0bafd575bd09cba",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:87:fb:94:8f:b1",
            "owner_id": "717561550547",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0660fc29c670e68c7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071f0dde8011596e6"
          },
          "dependencies": [
            "aws_security_group.terraform-allow-web-traffic",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717561550547:route-table/rtb-0df6867f20e0096db",
            "id": "rtb-0df6867f20e0096db",
            "owner_id": "717561550547",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02dac4c1acad62187",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform=route-table"
            },
            "tags_all": {
              "Name": "terraform=route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a208dd0d75df90b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000f381660354a8fc",
            "route_table_id": "rtb-0df6867f20e0096db",
            "subnet_id": "subnet-071f0dde8011596e6"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_route_table.terraform-route-table",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717561550547:security-group/sg-0660fc29c670e68c7",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0660fc29c670e68c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "717561550547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-allow-web-traffic"
            },
            "tags_all": {
              "Name": "terraform-allow-web-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a208dd0d75df90b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717561550547:subnet/subnet-071f0dde8011596e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071f0dde8011596e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717561550547",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-test-subnet"
            },
            "tags_all": {
              "Name": "terraform-test-subnet"
            },
            "vpc_id": "vpc-0a208dd0d75df90b3"
          },
          "dependencies": [
            "aws_vpc.terraform-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717561550547:vpc/vpc-0a208dd0d75df90b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6fc736037d60df0",
            "default_route_table_id": "rtb-0bdcc9799ceeba2d6",
            "default_security_group_id": "sg-08047c62db6fd6c49",
            "dhcp_options_id": "dopt-0c759500655cf21ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a208dd0d75df90b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bdcc9799ceeba2d6",
            "owner_id": "717561550547",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}